--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <!-- Header-->
 
-    <!-- <header class="page-header">
+    <header class="page-header">
       <div class="container header-container">
         <nav class="header-nav">
           <a class="logo header-logo" href="./index.html"
@@ -61,21 +61,21 @@
         </button>
       </div>
     </header>
-    <main> -->
+    <main>
       <!--section_1-->
 
-      <!-- <section class="introduction">
+      <section class="introduction">
         <div class="container introduction-container">
           <h1 class="title">Effective Solutions for Your Business</h1>
           <button class="btn-order" type="button" data-modal-open>
             Order Service
           </button>
         </div>
-      </section> -->
+      </section>
 
       <!--Section_2-->
 
-      <!-- <section class="goals">
+      <section class="goals">
         <div class="container goals-container">
           <h2 class="section-title">Our Advantages</h2>
           <ul class="goals-list">
@@ -129,11 +129,11 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!--Section_3-->
 
-      <!-- <section class="team">
+      <section class="team">
         <div class="container team-container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
@@ -377,11 +377,11 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!--Section_4-->
 
-      <!-- <section class="portfolio">
+      <section class="portfolio">
         <div class="container portfolio-container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -585,7 +585,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!--Footer-->
@@ -636,8 +636,8 @@
             </ul>
           </div>
         </div>
-    <!-- Subscribe -->
-       <div class="subscribe-footer">
+        <!-- Subscribe -->
+        <div class="subscribe-footer">
           <p class="subscribe-title-footer">Subscribe</p>
           <form class="footer-form">
             <label class="subscribe-title-footer">
