--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                   media="(min-width: 768px)"
                 />
                 <source
-                  srcset="./images/tom-mob.jpg 1x, /images/tom-mob2.jpg 2x"
+                  srcset="./images/tom-mob.jpg 1x, ./images/tom-mob2.jpg 2x"
                   media="(max-width: 767px)"
                 />
                 <img
