--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                     media="(min-width: 1158px)"
                   />
                   <source
-                    srcset="./images/img9tab.jpg 1x, ./images/img10tab.jpg 2x"
+                    srcset="./images/img10tab.jpg 1x, ./images/img9tab.jpg 2x"
                     media="(min-width: 768px)"
                   />
                   <source
@@ -767,50 +767,51 @@
         </li>
       </ul>
 
-      <address class="burger-contacts">
-        <ul class="burger-contacts-list">
-          <li class="burger-contacts-item">
-            <a class="burger-contacts-link tel" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
+      <div class="top-burger">
+        <address class="burger-contacts">
+          <ul class="burger-contacts-list">
+            <li class="burger-contacts-item">
+              <a class="burger-contacts-link tel" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+            <li class="burger-contacts-item">
+              <a class="burger-contacts-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+        </address>
+        <ul class="icons-list">
+          <li class="icons-spec">
+            <a class="icon-spec" href=" ">
+              <svg class="icon-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram-2-2"></use>
+              </svg>
+            </a>
           </li>
-          <li class="burger-contacts-item">
-            <a class="burger-contacts-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+          <li class="icons-spec">
+            <a class="icon-spec" href=" ">
+              <svg class="icon-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter-1-1"></use>
+              </svg>
+            </a>
           </li>
-        </ul>
-      </address>
-
-      <ul class="icons-list">
-        <li class="icons-spec">
-          <a class="icon-spec" href=" ">
-            <svg class="icon-svg" width="24" height="24">
-              <use href="./images/icons.svg#icon-instagram-2-2"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="icons-spec">
-          <a class="icon-spec" href=" ">
-            <svg class="icon-svg" width="24" height="24">
-              <use href="./images/icons.svg#icon-twitter-1-1"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="icons-spec">
-          <a class="icon-spec" href=" ">
-            <svg class="icon-svg" width="24" height="24">
-              <use href="./images/icons.svg#icon-facebook-1-1"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="icons-spec">
-          <a class="icon-spec" href=" ">
-            <svg class="icon-svg" width="24" height="24">
-              <use href="./images/icons.svg#icon-linkedin-1-1"></use>
-            </svg>
-          </a>
-        </li>
+          <li class="icons-spec">
+            <a class="icon-spec" href=" ">
+              <svg class="icon-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook-1-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="icons-spec">
+            <a class="icon-spec" href=" ">
+              <svg class="icon-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin-1-1"></use>
+              </svg>
+            </a>
+          </li>
+      </div>
       </ul>
     </div>
   </body>
